Weird compiler error

--- a/src/bin/styles/main.css
+++ b/src/bin/styles/main.css
@@ -2,6 +2,7 @@
     margin: 50px;
     border: 1px solid black;
     border-radius: 2px;
+    background-color: #cfcece;
 }
 
 #component-selector-content grid list row label {
